[lworld] Interpreter incorrectly handles uninitialized static inline type field

XMLWordPrintable

      Test Failures (1)
      -----------------
      Custom Run Test: @Run: test21_verifier - @Test: test21:
      compiler.lib.ir_framework.shared.TestRunException: There was an error while invoking @Run method public void compiler.valhalla.inlinetypes.TestUnloadedInlineTypeField.test21_verifier()
      at compiler.lib.ir_framework.test.CustomRunTest.invokeTest(CustomRunTest.java:162)
      at compiler.lib.ir_framework.test.AbstractTest.run(AbstractTest.java:99)
      at compiler.lib.ir_framework.test.CustomRunTest.run(CustomRunTest.java:89)
      at compiler.lib.ir_framework.test.TestVM.runTests(TestVM.java:821)
      at compiler.lib.ir_framework.test.TestVM.start(TestVM.java:249)
      at compiler.lib.ir_framework.test.TestVM.main(TestVM.java:164)
      Caused by: java.lang.reflect.InvocationTargetException
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:119)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at compiler.lib.ir_framework.test.CustomRunTest.invokeTest(CustomRunTest.java:159)
      ... 5 more
      Caused by: java.lang.ExceptionInInitializerError
      at compiler.valhalla.inlinetypes.TestUnloadedInlineTypeField.test21(TestUnloadedInlineTypeField.java:900)
      at compiler.valhalla.inlinetypes.TestUnloadedInlineTypeField.test21_verifier(TestUnloadedInlineTypeField.java:905)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      ... 7 more
      Caused by: java.lang.NullPointerException: There cannot be a NullPointerException at bci 0 of method void compiler.valhalla.inlinetypes.TestUnloadedInlineTypeField$Test21ClassB.<clinit>()
      at compiler.valhalla.inlinetypes.TestUnloadedInlineTypeField$Test21ClassB.<clinit>(TestUnloadedInlineTypeField.java:890)
      ... 10 more

      at compiler.lib.ir_framework.test.TestVM.runTests(TestVM.java:856)
      at compiler.lib.ir_framework.test.TestVM.start(TestVM.java:249)
      at compiler.lib.ir_framework.test.TestVM.main(TestVM.java:164)




      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x0000024913ce3936, pid=57556, tid=4900
      #
      # JRE version: Java(TM) SE Runtime Environment (18.0) (fastdebug build 18-lworld3ea+0-2022-01-21-1521047.tobias.hartmann.valhalla2)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-lworld3ea+0-2022-01-21-1521047.tobias.hartmann.valhalla2, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
      # Problematic frame:
      # j compiler.valhalla.inlinetypes.TestUnloadedInlineTypeField$Test21ClassB.<clinit>()V+0
      #

      Current thread (0x000002490c367620): JavaThread "main" [_thread_in_Java, id=4900, stack(0x000000ee11c00000,0x000000ee11d00000)]

      Stack: [0x000000ee11c00000,0x000000ee11d00000], sp=0x000000ee11cfe1e0, free space=1016k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      C 0x0000024913ce3936

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: