8280524: [lworld] Interpreter incorrectly handles uninitialized static inline type field